force-app/main/default/objects/Tower__c/Tower__c.object-meta.xml
<CustomObject>
    <label>Tower</label>
    <nameField>
        <label>Tower Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Towers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>