force-app/main/default/objects/Tower__c/fields/Apply_5_Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_5_Additional_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply 5% Additional Discount</label>
    <type>Checkbox</type>
</CustomField>