force-app/main/default/objects/Tower__c/fields/Enable_BillDesk__c.field-meta.xml
<CustomField>
    <fullName>Enable_BillDesk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable BillDesk</label>
    <type>Checkbox</type>
</CustomField>