force-app/main/default/objects/Tower__c/fields/Exclude_GST_Passback__c.field-meta.xml
<CustomField>
    <fullName>Exclude_GST_Passback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude GST Passback</label>
    <type>Checkbox</type>
</CustomField>