force-app/main/default/objects/Tower__c/fields/Footer_Page_Image__c.field-meta.xml
<CustomField>
    <fullName>Footer_Page_Image__c</fullName>
    <label>Footer Page Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>