force-app/main/default/objects/Tower__c/fields/Front_Page_Image__c.field-meta.xml
<CustomField>
    <fullName>Front_Page_Image__c</fullName>
    <label>Front_Page_Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>