force-app/main/default/objects/Tower__c/fields/Marketing_Tower_name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tower_name__c</fullName>
    <label>Marketing Tower name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>