force-app/main/default/objects/Tower__c/fields/OC_Approved__c.field-meta.xml
<CustomField>
    <fullName>OC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OC Approved</label>
    <type>Checkbox</type>
</CustomField>