force-app/main/default/objects/Tower__c/fields/Project_Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Project_Logo_Image__c</fullName>
    <formula>IMAGE( Project_Logo_URL__c , &quot;&quot;, 120, 500)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Logo Image</label>
    <type>Text</type>
</CustomField>