force-app/main/default/objects/Tower__c/fields/Project_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_Logo_URL__c</fullName>
    <label>Project Logo URL</label>
    <type>Url</type>
</CustomField>