force-app/main/default/objects/Tower__c/fields/RERA_Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>RERA_Certificate_No__c</fullName>
    <label>RERA Certificate No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>