force-app/main/default/objects/Tower__c/fields/RM_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>RM_Email_Address__c</fullName>
    <label>RM Email Address</label>
    <type>Email</type>
</CustomField>