force-app/main/default/objects/Tower__c/fields/RW_Floor_Plan__c.field-meta.xml
<CustomField>
    <fullName>RW_Floor_Plan__c</fullName>
    <label>Floor Plan</label>
    <type>Url</type>
</CustomField>