force-app/main/default/objects/Tower__c/fields/RW_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCAvenue</fullName>
            </value>
            <value>
                <fullName>BillDesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>