force-app/main/default/objects/Tower__c/fields/RW_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>RW_Terms_And_Conditions__c</fullName>
    <label>Terms And Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>