force-app/main/default/objects/Tower__c/fields/SAP_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Plant_Code__c</fullName>
    <label>SAP Plant Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>