force-app/main/default/objects/Tower__c/fields/Welcome_Call_CC_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_CC_Email_1__c</fullName>
    <label>Welcome Call CC Email 1</label>
    <type>Email</type>
</CustomField>