force-app/main/default/objects/Tower__c/fields/Welcome_Call_CC_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_CC_Email_2__c</fullName>
    <label>Welcome Call CC Email 2</label>
    <type>Email</type>
</CustomField>