force-app/main/default/objects/Tower__c/fields/Welcome_Call_CC_User_2__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_CC_User_2__c</fullName>
    <label>Welcome Call CC User 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>