force-app/main/default/objects/Tower__c/fields/Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Towers</relationshipLabel>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>